<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoricoPlantaFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="399dp"
        android:layout_height="291dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/tvNotas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="207dp"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tvNomePlanta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp"

                    android:text="@string/tvNomePlanta" />

                <TextView
                    android:id="@+id/tvPreferenciaLuz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp"
                    android:text="@string/tvPreferenciaLuz" />

                <TextView
                    android:id="@+id/tvFrequenciaRega"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp"
                    android:text="@string/tvFrequenciaRega" />

                <TextView
                    android:id="@+id/tvSensibilidadePragas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp"
                    android:text="@string/tvSensibilidadePragas" />

                <TextView
                    android:id="@+id/tvGenerico1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

                <TextView
                    android:id="@+id/tvGenerico2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

                <TextView
                    android:id="@+id/tvGenerico3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tvResultNomePlanta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

                <TextView
                    android:id="@+id/tvResultPreferenciaLuz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

                <TextView
                    android:id="@+id/tvResultFrequenciaRega"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

                <TextView
                    android:id="@+id/tvResultSensibilidadePragas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

                <TextView
                    android:id="@+id/tvResultGenerico1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

                <TextView
                    android:id="@+id/tvResultGenerico2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

                <TextView
                    android:id="@+id/tvResultGenerico3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btnEditar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnExcluir" />

    <TextView
        android:id="@+id/tvNotas"
        android:layout_width="403dp"
        android:layout_height="112dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/rvHistoricoCuidados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btnExcluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistoricoCuidados"
        android:layout_width="0dp"
        android:layout_height="227dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVoltar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btnVoltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>